--- a/cosmetics_reco/templates/skin_select.html
+++ b/cosmetics_reco/templates/skin_select.html
@@ -57,6 +57,18 @@
             height: 40px;
             width: 90px;
         }
+        {#버튼에 마우스를 올렸을때#}
+        button:hover{
+            background-color: #6282AA;
+        }
+        {#버튼 클릭하고 있을때#}
+        button:active{
+            background-color: #6282AA;
+        }
+        {#버튼 클릭했을때#}
+        button:visited{
+            background-color: #6282AA;
+        }
         {#results_box와 버튼 사이의 공백#}
         .btn_interval{
             margin-top: 5px;
