페이지 연결

--- a/cosmetics_reco_app/templates/skin_select.html
+++ b/cosmetics_reco_app/templates/skin_select.html
@@ -59,15 +59,15 @@
         }
         {#버튼에 마우스를 올렸을때#}
         button:hover{
-            background-color: #6282AA;
+            background-color: #203753;
         }
         {#버튼 클릭하고 있을때#}
         button:active{
-            background-color: #6282AA;
+            background-color: #203753;
         }
         {#버튼 클릭했을때#}
-        button:visited{
-            background-color: #6282AA;
+        button:focus{
+            background-color: #081F3C;
         }
         {#results_box와 버튼 사이의 공백#}
         .btn_interval{
