버튼 연결(1차)

--- a/cosmetics_reco_app/templates/cosmetics_result3.html
+++ b/cosmetics_reco_app/templates/cosmetics_result3.html
@@ -137,9 +137,11 @@
             </div>
         </div>
         <div class="btn_interval"></div>
-        <button>
-            <img src="picture/btn_play.png" >
-        </button>
+        <a href="{% url 'cosmetics_result4' %}">
+            <button>
+                <img src="picture/btn_play.png" >
+            </button>
+        </a>
     </div>
 </body>
 </html>
