--- a/cosmetics_reco_app/templates/skin_result.html
+++ b/cosmetics_reco_app/templates/skin_result.html
@@ -116,9 +116,11 @@
             </div>
         </div>
         <div class="btn_interval">
-            <button>
-                화장품 추천 받기
-            </button>
+            <a href="{% url 'skin_select' %}">
+                <button>
+                    화장품 추천 받기
+                </button>
+            </a>
             <div class="btn_space"></div>
             <button>
                 그만하기
