--- a/cosmetics_reco_app/templates/skin_select.html
+++ b/cosmetics_reco_app/templates/skin_select.html
@@ -149,9 +149,11 @@
                 <br>주의성분: 화장품 주의성분</br>
             </div>
         </div>
-        <button>
-            결과확인
-        </button>
+        <a href="{% url 'cosmetics_result1' %}">
+            <button>
+                결과확인
+            </button>
+        </a>
     </div>
 </body>
 </html>
