버튼 연결(1차)

--- a/cosmetics_reco_app/templates/skin_result.html
+++ b/cosmetics_reco_app/templates/skin_result.html
@@ -117,9 +117,7 @@
         </div>
         <div class="btn_interval">
             <a href="{% url 'skin_select' %}">
-                <button>
-                    화장품 추천 받기
-                </button>
+                <button>화장품 추천 받기</button>
             </a>
             <div class="btn_space"></div>
             <button>
