--- a/cosmetics_reco_app/templates/skin_select.html
+++ b/cosmetics_reco_app/templates/skin_select.html
@@ -150,9 +150,7 @@
             </div>
         </div>
         <a href="{% url 'cosmetics_result1' %}">
-            <button>
-                결과확인
-            </button>
+            <button>결과확인</button>
         </a>
     </div>
 </body>
